--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <td> <input class="button" type="button" value="." onclick="display('.')" /> </td>
             <td> <input class="button" type="button" value="0" onclick="display('0')" /> </td>
             <td> <input class="button" type="button" value="=" onclick="calculate()" /> </td>
-            <td> <input class="button" type="button" value="Maths" onclick="display('')" /> </td>
+            <td> <input class="button" type="button" value="Maths." onclick="display('')" /> </td>
         </tr>
     </table>
 </section>
